prevent scroll if nothing is overflowing

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
     min-height: 100vh;
     background-color: var(--primary-color);
     cursor: invert;
+    overflow: auto;
 }
 
 body.dark-mode {
